[gd_scene load_steps=31 format=2]

[ext_resource path="res://script/game_dna.gd" type="Script" id=1]
[ext_resource path="res://asset/background.png" type="Texture" id=2]
[ext_resource path="res://asset/font/Magra-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://asset/font/Magra-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://scene/dna.tscn" type="PackedScene" id=5]
[ext_resource path="res://scene/fade.tscn" type="PackedScene" id=6]
[ext_resource path="res://asset/button/Button-A.png" type="Texture" id=7]
[ext_resource path="res://asset/button/Button-A-Pressed.png" type="Texture" id=8]
[ext_resource path="res://asset/button/Button-T.png" type="Texture" id=9]
[ext_resource path="res://asset/button/Button-T-Pressed.png" type="Texture" id=10]
[ext_resource path="res://asset/button/Button-G.png" type="Texture" id=11]
[ext_resource path="res://asset/button/Button-G-Pressed.png" type="Texture" id=12]
[ext_resource path="res://asset/button/Button-C.png" type="Texture" id=13]
[ext_resource path="res://asset/button/Button-C-Pressed.png" type="Texture" id=14]
[ext_resource path="res://script/pause.gd" type="Script" id=15]
[ext_resource path="res://asset/ui/menu_box.png" type="Texture" id=16]
[ext_resource path="res://asset/ui/btn_white_long.png" type="Texture" id=17]
[ext_resource path="res://asset/ui/btn_white_long_hover.png" type="Texture" id=18]
[ext_resource path="res://asset/ui/btn_box_close.png" type="Texture" id=19]
[ext_resource path="res://scene/tutorial.tscn" type="PackedScene" id=20]
[ext_resource path="res://asset/dna/nekleotida.png" type="Texture" id=21]
[ext_resource path="res://asset/ui/btn_white_box_setting.png" type="Texture" id=22]
[ext_resource path="res://asset/ui/btn_white_box_setting_hover.png" type="Texture" id=23]

[sub_resource type="Animation" id=1]
resource_name = "correct"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("actionRespond/color:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.179046, 0.309057 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0.262745, 0.811765, 0.129412, 0.392157 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "wrong"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("actionRespond/color:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.179046, 0.309057 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 1, 0.00392157, 0.00392157, 0.392157 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="DynamicFont" id=3]
size = 17
outline_size = 3
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 30
outline_size = 4
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 32
outline_size = 3
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 20
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 318.272, 10 )

[node name="DNAconstruct" type="Node2D"]
position = Vector2( -0.37146, -1.31624 )
script = ExtResource( 1 )

[node name="background" type="TextureRect" parent="."]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )

[node name="actionRespond" type="AnimationPlayer" parent="background"]
anims/correct = SubResource( 1 )
anims/wrong = SubResource( 2 )

[node name="color" type="ColorRect" parent="background/actionRespond"]
margin_top = 69.0
margin_right = 480.0
margin_bottom = 803.0
color = Color( 0, 0, 0, 0 )

[node name="spawnpos" type="Position2D" parent="."]
position = Vector2( 120.459, -21.1558 )

[node name="latar" type="ColorRect" parent="."]
margin_right = 480.0
margin_bottom = 70.0

[node name="score" type="Label" parent="latar"]
margin_left = 11.0
margin_top = 13.0
margin_right = 118.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Score: 0"

[node name="percent" type="Label" parent="latar"]
margin_left = 11.0
margin_top = 34.0
margin_right = 138.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0%"

[node name="difficulty" type="Label" parent="latar"]
margin_left = 6.0
margin_top = 13.0
margin_right = 479.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 0.607843, 0, 1 )
text = "Kesulitan"
align = 1

[node name="dna" parent="." instance=ExtResource( 5 )]
visible = false

[node name="spawn" type="Timer" parent="."]
autostart = true

[node name="fade" parent="." instance=ExtResource( 6 )]
pause_mode = 2

[node name="action" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="control" type="HBoxContainer" parent="action"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -19.5226
margin_top = 600.604
margin_right = 472.477
margin_bottom = 796.604
custom_constants/separation = 0

[node name="A" type="TextureButton" parent="action/control"]
margin_right = 120.0
margin_bottom = 196.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )

[node name="T" type="TextureButton" parent="action/control"]
margin_left = 120.0
margin_right = 240.0
margin_bottom = 196.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )

[node name="G" type="TextureButton" parent="action/control"]
margin_left = 240.0
margin_right = 360.0
margin_bottom = 196.0
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 12 )

[node name="C" type="TextureButton" parent="action/control"]
margin_left = 360.0
margin_right = 480.0
margin_bottom = 196.0
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 14 )

[node name="pause" type="Control" parent="."]
pause_mode = 2
editor/display_folded = true
visible = false
script = ExtResource( 15 )

[node name="ColorRect" type="ColorRect" parent="pause"]
margin_right = 480.0
margin_bottom = 800.0
color = Color( 0, 0, 0, 0.694118 )

[node name="pop" type="TextureRect" parent="pause"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 63.8986
margin_top = 136.696
margin_right = 430.899
margin_bottom = 560.696
texture = ExtResource( 16 )
expand = true
stretch_mode = 6

[node name="title" type="Label" parent="pause"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 124.0
margin_top = 182.0
margin_right = 367.0
margin_bottom = 221.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 0.537255, 0, 1 )
text = "Pengaturan"
align = 1
valign = 1

[node name="Tutorial" type="TextureButton" parent="pause"]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 65.4926
margin_top = 342.029
margin_right = 426.493
margin_bottom = 414.029
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 18 )
texture_hover = ExtResource( 18 )
expand = true
stretch_mode = 3

[node name="Label" type="Label" parent="pause/Tutorial"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -121.5
margin_top = -17.5
margin_right = 121.5
margin_bottom = 17.5
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Tutorial"
align = 1
valign = 1

[node name="Keluar" type="TextureButton" parent="pause"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 65.4926
margin_top = 429.029
margin_right = 426.493
margin_bottom = 501.029
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 18 )
texture_hover = ExtResource( 18 )
expand = true
stretch_mode = 3

[node name="Label" type="Label" parent="pause/Keluar"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -121.5
margin_top = -17.5
margin_right = 121.5
margin_bottom = 17.5
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Keluar"
align = 1
valign = 1

[node name="close" type="TextureButton" parent="pause"]
margin_left = 384.9
margin_top = 184.15
margin_right = 420.9
margin_bottom = 221.15
texture_normal = ExtResource( 19 )
expand = true
stretch_mode = 4

[node name="tutorial" parent="." instance=ExtResource( 20 )]
visible = false

[node name="hasil" type="Control" parent="."]
pause_mode = 2
visible = false

[node name="ColorRect" type="ColorRect" parent="hasil"]
margin_right = 480.0
margin_bottom = 800.0
color = Color( 0, 0, 0, 0.694118 )

[node name="pop" type="TextureRect" parent="hasil"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 64.0
margin_top = 176.0
margin_right = 431.0
margin_bottom = 560.0
texture = ExtResource( 16 )
expand = true
stretch_mode = 7

[node name="title" type="Label" parent="hasil"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 124.0
margin_top = 182.0
margin_right = 367.0
margin_bottom = 221.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 0.537255, 0, 1 )
text = "Hasil"
align = 1
valign = 1

[node name="close" type="TextureButton" parent="hasil"]
margin_left = 384.9
margin_top = 184.15
margin_right = 420.9
margin_bottom = 221.15
texture_normal = ExtResource( 19 )
expand = true
stretch_mode = 4

[node name="label" type="RichTextLabel" parent="hasil"]
margin_left = 80.0
margin_top = 243.0
margin_right = 406.0
margin_bottom = 389.0
custom_fonts/normal_font = SubResource( 6 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "p"

[node name="TextureRect" type="TextureRect" parent="hasil"]
visible = false
margin_left = 67.0
margin_top = 382.0
margin_right = 429.0
margin_bottom = 482.0
texture = ExtResource( 21 )
stretch_mode = 6

[node name="Setting" type="TextureButton" parent="."]
pause_mode = 2
margin_left = 415.584
margin_top = 8.0
margin_right = 472.584
margin_bottom = 65.0
texture_normal = ExtResource( 22 )
texture_pressed = ExtResource( 23 )
texture_hover = ExtResource( 23 )
expand = true
stretch_mode = 5

[node name="criticalArea" type="Area2D" parent="."]
position = Vector2( 235.676, 647.11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="criticalArea"]
position = Vector2( 0, 142 )
shape = SubResource( 7 )
[connection signal="timeout" from="spawn" to="." method="_on_Spawn_timeout"]
[connection signal="animation_finished" from="fade" to="." method="_on_fade_animation_finished"]
[connection signal="pressed" from="action/control/A" to="." method="_on_A_pressed"]
[connection signal="pressed" from="action/control/T" to="." method="_on_T_pressed"]
[connection signal="pressed" from="action/control/G" to="." method="_on_G_pressed"]
[connection signal="pressed" from="action/control/C" to="." method="_on_C_pressed"]
[connection signal="pressed" from="pause/Tutorial" to="." method="_on_Tutorial_pressed"]
[connection signal="pressed" from="pause/Keluar" to="." method="_on_Keluar_pressed"]
[connection signal="pressed" from="pause/close" to="." method="_on_setting_close_pressed"]
[connection signal="close_btn" from="tutorial" to="." method="_on_tutorial_close_btn"]
[connection signal="pressed" from="hasil/close" to="." method="_on_hasil_close_pressed"]
[connection signal="pressed" from="Setting" to="." method="_on_Setting_pressed"]
[connection signal="body_entered" from="criticalArea" to="." method="_on_criticalArea_body_entered"]
